# SMediaFramework

./: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Directory.Version.props  LICENSE  MFPlayer.sln  README.md
.github/native-manifest/: linux-x64.txt  win-x64.txt
.github/workflows/: build.yml  next-build.yml
Doc/: Build-Environment.md  CuePlayer-AVSync-And-UX-Review-2026-05-23.md  CuePlayer-Phase5-Checklist-2026-05-23.md  CuePlayer-Redesign-Checklist-2026-05-22.md  Dependency-Reference-Implementation-Review-2026-06-06.md  Future-Plans.md  HaPlay-Control-Device-Profiles.md  HaPlay-Control-Getting-Started.md  HaPlay-Control-Review-Findings-2026-06-05.md  HaPlay-Control-Scripting-Reference.md  HaPlay-Control-Setup.md  HaPlay-Control-X32-BCF2000-Layers.md  HaPlay-Control-X32-XTouch-Layers.md  HaPlay-Cue-Composition-Timeline-Semantics.md  HaPlay-CuePlayer-Cleanup-Backlog.md  HaPlay-Framework-Gaps-Checklist-2026-05-20.md  HaPlay-MIDI-OSC-Scripting-Graph-Checklist.md  HaPlay-MIDI-OSC-Scripting-Rewrite-Checklist.md  HaPlay-MIDI-OSC-Scripting-Rewrite-Plan.md  HaPlay-MediaFramework-Implementation-Checklist-2026-06-03.md  HaPlay-MediaFramework-Review-2026-06-03.md  HaPlay-MediaPlayer-Compositions-Plan.md  HaPlay-MediaPlayer-UX-Improvements.md  HaPlay-MultiOutput-Sync.md  HaPlay-Output-Mapping-Plan.md  HaPlay-Transport-Performance-Analysis.md  HaPlay-UI-Refactor-Checklist-2026-05-20.md  HaPlay-UI-Refactor-Plan-2026-05-20.md  IssueNote.txt  MFPlayer-HaPlay-Full-Review-2026-06-18.md  MediaFramework-AVSync-Seek-Investigation.md  MediaFramework-Architecture.md  MediaFramework-Checklist-2026-05-20.md  MediaFramework-Checklist-2026-05.md  MediaFramework-Checklist-2026-06.md  MediaFramework-Critical-Review-2026-05-22.md  MediaFramework-Cue-Clip-API-RFC.md  MediaFramework-Deep-Review-Findings.md  MediaFramework-Findings-2026-05-20.md  MediaFramework-Format-Support.md  (+16 more)
Doc/Archive/: HaPlay-Composition-Perf-Plan.md  HaPlay-Control-Review-Findings-2026-06-05.md  HaPlay-Framework-Gaps-Checklist-2026-05-20.md  HaPlay-MIDI-OSC-Scripting-Graph-Checklist.md  HaPlay-MIDI-OSC-Scripting-Graph-Plan.md  HaPlay-MIDI-OSC-Scripting-Rewrite-Checklist.md  HaPlay-Reliability-Soak-Test-Plan.md  HaPlay-UI-Refactor-Plan-2026-05-20.md  HaPlay-UI-Rewrite-Plan-2026-06-10.md  HaPlay-UI-UX-Review-2026-06-06.md  (+4 more)
MediaFramework/Native/mmd_bullet/: .gitignore  CMakeLists.txt  build.sh  mmd_bullet.cpp  mmd_bullet.h  verify-vendored-bullet.sh
Next/: 01-Architecture-and-Principles.md  02-Project-Structure.md  03-AV-Sync-Clocks-Routing.md  04-Compositor-Warp-GPU.md  05-Plugin-Model.md  06-Control-Surface.md  07-Migration-and-Phasing.md  08-Open-Decisions.md  09-Phase-Checklists.md  README.md
Old_Rewrite_Docs/: 02-Project-Structure.md  03-AV-Sync-Clocks-Routing.md  04-Compositor-Warp-GPU.md  05-Plugin-Model.md  07-Migration-and-Phasing.md  08-Open-Decisions.md  09-Phase-Checklists.md  README.md
Review/: 00-Action-Checklist.md  01-Core-Time-Players.md  02-Routing-and-Audio.md  03-Video-Decode-Presentation-NDI.md  04-Session-and-Show.md  05-Sources-and-Subtitles.md  06-Control-MIDI-OSC.md  07-Interop-ABIs.md  08-HaPlay-Application.md  09-HaPlay-UX.md  10-Engineering-Quality.md  11-Verification-2026-07-06.md  2026-07-18-framework-ui-resource-review.md  CODE-REVIEW-2026-07-11.md  CODE-REVIEW-2026-07-12.md  CODE-REVIEW-2026-07-13.md  FRAMEWORK-AND-HAPLAY-REVIEW-2026-07-16.md  Ideas.txt  MFPlayer-Next-Critical-Review.md  MFPlayer-Next-Review-2026-07-02.md  README.md  TEST-01-Coverage-Contracts.md
WinTools/: build-miniaudio-win-x64.cmd  build-portaudio-win-x64.cmd  build-portmidi-win-x64.cmd
docs/: gpu-frame-ownership.md
next/: Directory.Build.props  Directory.Build.targets  Directory.Packages.props  MFPlayer.Next.sln  README.md
scripts/: build-projectm.sh  check-native-manifest.sh  check-native-versions.sh  copy-ndi.ps1  download-ffmpeg.ps1  download-portmidi.ps1  generate-native-sbom.sh  load-probe-native-manifest.sh  set-version.sh
(+2536 files in other folders)
